# tomlhold

./: .gitignore  MANIFEST.in  Makefile  README.rst  pyproject.toml  run_tests.py
docs/: CNAME  features.html  impressum.html  index.html  index2.html  install.html  intro.html  license.html  testing.html  v1.0.rst  v1.1.rst  v2.0.rst
src/tomlhold/: __init__.py  __main__.py
src/tomlhold/_utils/: Cfg.py  __init__.py  cfg.toml  funcs.py  keying.py  norming.py
src/tomlhold/core/: TOMLDict.py  TOMLHolder.py  TOMLList.py  __init__.py
src/tomlhold/tests/: __init__.py  test_core.py  test_dummy.py  test_mix.py  test_types.py
tests/: test_TOMLDict.py  test_TOMLList.py
