[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "datahold>=3.0,<4",
    "frozendict>=2.4.6,<3",
    "setdoc>=1.3.17,<2",
    "tomli-w>=1.2,<2",
]
description = "This project provides holders for TOML data."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "tomlhold"
readme = "README.rst"
requires-python = ">=3.11"
version = "2.0.4"

[project.urls]
Download = "https://pypi.org/project/tomlhold/#files"
Index = "https://pypi.org/project/tomlhold/"
Source = "https://github.com/johannes-programming/tomlhold/"
Website = "https://tomlhold.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
